--- a/.env.example
+++ b/.env.example
@@ -1,18 +1,27 @@
 APP_ENV=local
 APP_DEBUG=true
-APP_KEY=SomeRandomString
+APP_KEY=randomString
 
-DB_HOST=localhost
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_HOST=host
+DB_DATABASE=name
+DB_USERNAME=usernam
+DB_PASSWORD=password
 
 CACHE_DRIVER=file
 SESSION_DRIVER=file
-QUEUE_DRIVER=sync
+QUEUE_DRIVER=database
 
-MAIL_DRIVER=smtp
-MAIL_HOST=mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
+MAIL_DRIVER=mailgun
+MAIL_HOST=smtp.mailgun.org
+MAIL_PORT=587
+MAIL_USERNAME=username
+MAIL_PASSWORD=password
+
+FB_APP_ID=facebook_id
+FB_APP_SECRET=facebook_secret
+FB_PAGE_ID=facebook page id
+
+MAILGUN_DOMAIN=domain
+MAILGUN_SECRET=password
+
+GOOGLE_API_SERVER_KEY=secret_key
